# blockchain

./: Procfile  blockChain.py  blockChainDataBase.json  chat_app.db  main.py  pyproject.toml  requirements.txt
static/: style.css
static/css/: style.css  style1.css
static/js/: script.js  socket.js
static/landing/css/: tooplate-gotto-job.css
static/register/: style.css
templates/: chat.html  chat_page.html  index.html  index_reg.html  landing.html  login.html  register.html
test-env/: pyvenv.cfg
test-env/Scripts/: activate  activate.bat
