[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["tijothomas <tijothomas366@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
# Add your dependencies here, for example:
# flask = "^2.0"
# requests = "^2.25"

[tool.poetry.dev-dependencies]
# Add development dependencies if necessary, for example:
# pytest = "^6.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
